color contrast fix

--- a/style.less
+++ b/style.less
@@ -901,7 +901,7 @@ body.home section#secondary article {
 }
 body.home section h1 {
 	display: block;
-	color: @lightgrey;
+	color: @grey;
 }
 body.home section a {
 	color: @white;
